--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
+    <form action="#" method="post">
+        <input type="number" name="l1" id="l1"><br>
+        <input type="number" name="l2" id="l2"><br>
+        <input type="reset" value="reset">
+    </form>
     <script src="main.js"></script>
+    <!-- <input type="submit" value="d"> -->
 </body>
 
 </html>
