--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="number" name="l2" id="l2"><br>
         <input type="reset" value="reset">
     </form>
-    <script src="main.js"></script>
+    <script src="/app/main.js"></script>
     <!-- <input type="submit" value="d"> -->
 </body>
 
