--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <form action="#" method="post">
-        <input type="number" name="l1" id="l1"><br>
-        <input type="number" name="l2" id="l2"><br>
-        <input type="reset" value="reset">
+      <input type="text" id="name" placeholder="name" /><br />
+      <input type="text" id="color" placeholder="color" /><br />
+      <input type="reset" value="reset" />
     </form>
-    <script src="/app/main.js"></script>
-    <!-- <input type="submit" value="d"> -->
-</body>
-
+    <script type="module" src="app/dog.js"></script>
+    <script type="module" src="app/time.js"></script>
+    <script type="module" src="app/main.js"></script>
+  </body>
 </html>
